alternc (0.9.6.5) testing; urgency=low

  * Changing ownership of /var/alternc/tmp, makes file upload work again (#1058)
  * Force the restart of apache & apache-ssl (#1000)
  * Redirect are now done on http://$url$1 base, not $url/$1 (#1054)
  * Patch to install properly apache and apache-ssl modules
  * We copy /etc/squirrelmail/default_pref content for new accounts in _createpop (#1015)
  * we configure postfix even if main.cf don't currently exist (#1009)
  * Fixed the 'view' link issues (no urlencode) (#690)
  * Change "move" to "move to" (ergonomic) (#787)
  * Confirm file deletion in the browser (#659)
  * fixes dns install of internal hosting domains (#1056)
  * fixes profftp configuration for Etch (#1046)
  * fixes .eu.be.name whois issue (#571)
  * change apache log format to a working one (using host request), also fix awstats issues. 

 -- Benjamin Sonntag <benjamin@alternc.org>  Tue, 23 May 2007 00:07:54 +0200

alternc (0.9.6.3) stable; urgency=low

  * change dependency on courier-authmysql or courier-authlib-mysql for etch
  * fix sql backups in case of missing target directory
  * fix translations
  * php5 compatibility
  * fix checkmx (#1031)
  * etch support

 -- Antoine Beaupré <anarcat@koumbit.org>  Fri, 11 May 2007 01:18:08 +0000

alternc (0.9.6.2) stable; urgency=high

  * repackage 0.9.6.1 properly: include all latest fixes, which didn't make it
    to the package
  * don't put postfix in pre-depends
  * urgency=high because 0.9.6.1 doesn't include all the security fixes it
    pretends

 -- Antoine Beaupré <anarcat@koumbit.org>  Wed, 17 Jan 2007 15:58:39 -0500

alternc (0.9.6.1) stable; urgency=high

  * Emergency release to fix issues with release 0.9.6.
  * Fix a security issue with override_php.conf not being configured in apache, effectively disabling open_basedir restrictions. Closes: #1005
  * Show installation warning only once. Closes: #737
  * Make it possible to erase files and directories in file browser. Closes: #1002.